# fast_api_async

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
fast_api_async/: app.py  database.py  models.py  schemas.py  security.py  settings.py
migrations/: env.py
migrations/versions/: 00fac7696d30_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
